Added option `suppress-backend-headers`

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -922,6 +922,12 @@
 %   \item[xdvipdfmx] Use the \texttt{xdvipdfmx} driver (\XeTeX{} only).
 % \end{itemize}
 %
+% \DescribeOption{suppress-backend-headers}
+% The \texttt{suppress-backend-headers} option suppresses loading of
+% backend-specific header files; currently this only affects \texttt{dvips}.
+% This option is available to support DVI-based routes that do not
+% support the |header| line used by \texttt{dvips}.
+%
 % \section{Using \pkg{expl3} with formats other than \LaTeXe{}}
 %
 % As well as the \LaTeXe{} package \pkg{expl3}, there is also a
@@ -1273,6 +1279,9 @@
         \sys_load_debug:
         \debug_on:n { log-functions }
       } ,
+    suppress-backend-headers .bool_set_inverse:N
+      = \g__kernel_backend_header_bool ,
+    suppress-backend-headers .initial:n = false ,
     undo-recent-deprecations .code:n =
       {
         \bool_gset_true:N \g__kernel_deprecation_undo_recent_bool
