--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -504,6 +504,10 @@
 %   Applies the \meta{matrix} to the current transformation matrix.
 % \end{function}
 %
+% \begin{function}{\g__kernel_backend_header_bool}
+%   Specifies whether to write headers for the backend.
+% \end{function}
+%
 % \begin{function}{\l__kernel_color_stack_int}
 %   The color stack used in \pdfTeX{} and \LuaTeX{} for the main color.
 % \end{function}
