--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -158,7 +158,10 @@
 \cs_if_exist:NTF \AtBeginDvi
   { \exp_not:N \AtBeginDvi }
   { \use:n }
-    { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
+    {
+      \bool_if:NT \g__kernel_backend_header_bool
+        { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
+    }
 %    \end{macrocode}
 %
 % \begin{macro}
