--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -961,7 +961,6 @@
 % \end{variable}
 %
 %
-% \begin{macro}{\@@_tmp:NN}
 %   This temporary macro will be used since some of the definitions will need an
 %   active comma or equals sign. Inside of this macro |#1| will be the active
 %   comma and |#2| will be the active equals sign.
@@ -970,9 +969,8 @@
   \cs_set_protected:Npn \@@_tmp:NN #1#2
     {
 %    \end{macrocode}
-% \end{macro}
 %
-% \begin{macro}{\keyval_parse:NNn}
+% \begin{macro}[EXP]{\keyval_parse:NNn}
 %   The main function starts the first of two input loops. The outer loop splits
 %   the key--value list at active commas, the inner loop will do so at other
 %   commas. The use of \cs{q_mark} here prevents loss of braces from the key
@@ -985,7 +983,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_loop_active:NNw}
+% \begin{macro}[EXP]{\@@_loop_active:NNw}
 %   First a fast test for the end of the loop is done, it'll gobble everything
 %   up to a \cs{q_mark} immediately followed by a \cs{q_recursion_tail}. The
 %   loop ending macro will gobble everything to the last \cs{q_mark} in this
@@ -1003,7 +1001,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_loop_other:NNw}
+% \begin{macro}[EXP]{\@@_loop_other:NNw}
 %   The second loop uses the same test for its end as the first loop, next it
 %   tests whether there are other or active equals signs, throwing an error if
 %   there are both. If there are none, test whether the argument is blank or is
@@ -1037,7 +1035,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_split_active:wN, \@@_split_active_aux:nwN}
+% \begin{macro}[EXP]{\@@_split_active:wN, \@@_split_active_aux:nwN}
 %   Splits at the first active equals sign and tests whether there are any more
 %   valid split points, if so throw an error and gobble the remaining
 %   \meta{function_2}, which will not yet be gobbled. If there was only one
@@ -1058,7 +1056,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_if_has_equal_active:w}
+% \begin{macro}[EXP]{\@@_if_has_equal_active:w}
 %   The test for an active equals sign just gobbles tokens until the first
 %   active equals sign and then runs the test for an empty argument.
 %    \begin{macrocode}
@@ -1080,7 +1078,7 @@
 \group_end:
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_end_loop_active:w,\@@_end_loop_other:w}
+% \begin{macro}[EXP]{\@@_end_loop_active:w,\@@_end_loop_other:w}
 %   Both of these macros just have to gobble a few tokens to remove the reminder
 %   of the loops current iteration. We do this in a pretty static manner,
 %   explicitly stating every token we know it'll gobble because this is slightly
@@ -1101,7 +1099,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_split_other:wN, \@@_split_other:nwN}
+% \begin{macro}[EXP]{\@@_split_other:wN, \@@_split_other:nwN}
 %   These work exactly as \cs[no-index]{@@_split_active:wN}, just for
 %   equals signs of category other.
 %    \begin{macrocode}
@@ -1119,7 +1117,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_key:nN}
+% \begin{macro}[EXP]{\@@_key:nN}
 %   This will get the current key with spaces trimmed and \meta{function_1} as
 %   its arguments. All it has to do is put them in an \cs{exp_not:n} and reorder
 %   them.
@@ -1131,7 +1129,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_key_val:nnN}
+% \begin{macro}[EXP]{\@@_key_val:nnN}
 %   This will get the key name and value with spaces trimmed. It has to 
 %   assert that the key name isn't empty. Afterwards
 %   put them into an \cs{exp_not:n} together with \meta{function_2}. If the key
@@ -1146,7 +1144,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_if_empty:w,\@@_if_blank:w,\@@_if_recursion_tail:w}
+% \begin{macro}[EXP]{\@@_if_empty:w,\@@_if_blank:w,\@@_if_recursion_tail:w}
 %   All these tests work by gobbling tokens until a certain combination is met,
 %   which makes them pretty fast. The test for a blank argument should be called
 %   with an arbitrary token following the argument. Each of these utilize the
@@ -1158,7 +1156,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_has_false:w,\@@_blank_true:w,\@@_empty_key:w}
+% \begin{macro}[EXP]{\@@_has_false:w,\@@_blank_true:w,\@@_empty_key:w}
 %   These macros will be called if the tests above didn't gobble them, they
 %   execute the branching.
 %    \begin{macrocode}
@@ -1171,7 +1169,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_if_has_equal_other:w}
+% \begin{macro}[EXP]{\@@_if_has_equal_other:w}
 %   Another test that works by gobbling tokens until a specific one is hit.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_has_equal_other:w #1 =
@@ -1181,7 +1179,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_misplaced_equal_error:}
+% \begin{macro}[EXP]{\@@_misplaced_equal_error:}
 %   Just throw an error expandably. This is hid inside a macro so that other
 %   macros don't have to gobble so many tokens, which increases speed.
 %    \begin{macrocode}
@@ -1198,8 +1196,9 @@
   { Misplaced~equals~sign~in~key-value~input~\msg_line_context: }
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_trim:nN}
-% \begin{macro}{\@@_trim_auxi:w,\@@_trim_auxii:w,\@@_trim_auxiii:w,\@@_trim_auxiv:w}
+% \begin{macro}[EXP]{\@@_trim:nN}
+% \begin{macro}[EXP]
+%   {\@@_trim_auxi:w,\@@_trim_auxii:w,\@@_trim_auxiii:w,\@@_trim_auxiv:w}
 % And an adapted version of \cs{__tl_trim_spaces:nn} which is a bit faster for
 % our use case, as it can strip the braces at the end. This is pretty much the
 % same concept, so I won't comment on it here. The speed gain by using this
