Standardise some function names
For new work, we are avoiding anything after "w" in sigs.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1017,12 +1017,12 @@
               \@@_if_has_equal_active:w ##3 #2 \s_@@_stop
                 \@@_has_false:w \s_@@_mark \s_@@_stop \use_i:nn
                 \@@_misplaced_equal_error:
-                { \@@_split_other:wN ##3 = \s_@@_stop ##2 }
+                { \@@_split_other:w ##3 = \s_@@_stop ##2 }
             }
             {
               \@@_if_has_equal_active:w ##3 #2 \s_@@_stop
                 \@@_has_false:w \s_@@_mark \s_@@_stop \use_i:nn
-                { \@@_split_active:wN ##3 #2 \s_@@_stop ##2 }
+                { \@@_split_active:w ##3 #2 \s_@@_stop ##2 }
                 {
                   \@@_if_blank:w ##3 \s_@@_nil \s_@@_stop
                     \@@_blank_true:w \s_@@_mark \s_@@_stop \use:n
@@ -1034,18 +1034,18 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\@@_split_active:wN, \@@_split_active_aux:nwN}
+% \begin{macro}[EXP]{\@@_split_active:w, \@@_split_active:nw}
 %   Splits at the first active equals sign and tests whether there are any more
 %   valid split points, if so throw an error and gobble the remaining
 %   \meta{function_2}, which will not yet be gobbled. If there was only one
 %   active equals sign start trimming the spaces off the key and give control to
 %   \cs[no-index]{@@_key_val:nnN}.
 %    \begin{macrocode}
-      \cs_new:Npn \@@_split_active:wN ##1 #2
+      \cs_new:Npn \@@_split_active:w ##1 #2
         {
-          \@@_trim:nN { ##1 } \@@_split_active_aux:nwN \s_@@_mark
+          \@@_trim:nN { ##1 } \@@_split_active:nw \s_@@_mark
         }
-        \cs_new:Npn \@@_split_active_aux:nwN ##1 ##2 #2 ##3 \s_@@_stop
+        \cs_new:Npn \@@_split_active:nw ##1 ##2 #2 ##3 \s_@@_stop
           {
             \@@_if_empty:w \s_@@_mark ##3 \s_@@_stop
               \@@_has_false:w \s_@@_mark \s_@@_stop \use_i:nn
@@ -1098,15 +1098,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\@@_split_other:wN, \@@_split_other:nwN}
+% \begin{macro}[EXP]{\@@_split_other:w, \@@_split_other:nw}
 %   These work exactly as \cs[no-index]{@@_split_active:wN}, just for
 %   equals signs of category other.
 %    \begin{macrocode}
-\cs_new:Npn \@@_split_other:wN #1 =
+\cs_new:Npn \@@_split_other:w #1 =
   {
-    \@@_trim:nN { #1 } \@@_split_other_aux:nwN \s_@@_mark
+    \@@_trim:nN { #1 } \@@_split_other:nw \s_@@_mark
   }
-  \cs_new:Npn \@@_split_other_aux:nwN #1 #2 = #3 \s_@@_stop
+  \cs_new:Npn \@@_split_other:nw #1 #2 = #3 \s_@@_stop
     {
       \@@_if_empty:w \s_@@_mark #3 \s_@@_stop
         \@@_has_false:w \s_@@_mark \s_@@_stop \use_i:nn
