--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -156,7 +156,7 @@
 % actual output does not write anything.
 %    \begin{macrocode}
 \cs_if_exist:NTF \AtBeginDvi
-  { \exp_not:N \AtBeginDvi }
+  { \AtBeginDvi }
   { \use:n }
     {
       \bool_if:NT \g__kernel_backend_header_bool
