--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -159,7 +159,9 @@
   { \AtBeginDvi }
   { \use:n }
     {
-      \bool_if:NT \g__kernel_backend_header_bool
+      \bool_lazy_and:nnT
+        { \cs_if_exist_p:N \g__kernel_backend_header_bool }
+        { \g__kernel_backend_header_bool }
         { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
     }
 %    \end{macrocode}
