updated descriptions of macros

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -972,7 +972,7 @@
 % \begin{macro}[EXP]{\keyval_parse:NNn}
 %   The main function starts the first of two input loops. The outer loop splits
 %   the key--value list at active commas, the inner loop will do so at other
-%   commas. The use of \cs{q_mark} here prevents loss of braces from the key
+%   commas. The use of \cs{s_@@_mark} here prevents loss of braces from the key
 %   argument.
 %    \begin{macrocode}
       \cs_new:Npn \keyval_parse:NNn ##1 ##2 ##3
@@ -984,8 +984,8 @@
 %
 % \begin{macro}[EXP]{\@@_loop_active:NNw}
 %   First a fast test for the end of the loop is done, it'll gobble everything
-%   up to a \cs{q_mark} immediately followed by a \cs{q_recursion_tail}. The
-%   loop ending macro will gobble everything to the last \cs{q_mark} in this
+%   up to an \cs{s_@@_mark} immediately followed by an \cs{s_@@_tail}. The loop
+%   ending macro will gobble everything to the last \cs{s_@@_mark} in this
 %   definition.
 %   If the end isn't reached yet, start the second loop splitting at other
 %   comments, and after that one iterate the current loop.
@@ -1036,11 +1036,11 @@
 %
 % \begin{macro}[EXP]{\@@_split_active:w}
 % \begin{macro}[EXP]{\@@_split_active:nw}
-%   Splits at the first active equals sign and tests whether there are any more
-%   valid split points, if so throw an error and gobble the remaining
-%   \meta{function_2}, which will not yet be gobbled. If there was only one
-%   active equals sign start trimming the spaces off the key and give control to
-%   \cs[no-index]{@@_key_val:nnN}.
+%   Splits at the first active equals sign and trims the key. Next test whether
+%   there are any more valid split points, if so throw an error and gobble the
+%   remaining \meta{function_2}, which will not yet be gobbled. If there was
+%   only one active equals sign start trimming the spaces off the value and give
+%   control to \cs[no-index]{@@_key_val:nnN}.
 %    \begin{macrocode}
       \cs_new:Npn \@@_split_active:w ##1 #2
         {
@@ -1082,7 +1082,7 @@
 % \begin{macro}[EXP]{\@@_end_loop_active:w,\@@_end_loop_other:w}
 %   Both of these macros just have to gobble a few tokens to remove the reminder
 %   of the loops current iteration. We do this in a pretty static manner,
-%   explicitly stating every token we know it'll gobble because this is slightly
+%   explicitly stating every token we know beforehand because this is slightly
 %   faster.
 %    \begin{macrocode}
 \cs_new:Npn \@@_end_loop_active:w
@@ -1134,9 +1134,9 @@
 %
 % \begin{macro}[EXP]{\@@_key_val:nnN}
 %   This will get the key name and value with spaces trimmed. It has to
-%   assert that the key name isn't empty. Afterwards
-%   put them into an \cs{exp_not:n} together with \meta{function_2}. If the key
-%   is empty they are gobbled instead.
+%   assert that the key name isn't empty. Afterwards put them into an
+%   \cs{exp_not:n} together with \meta{function_2}. If the key is empty they are
+%   gobbled instead.
 %    \begin{macrocode}
 \cs_new:Npn \@@_key_val:nnN #1 #2 #3
   {
@@ -1151,7 +1151,7 @@
 %   All these tests work by gobbling tokens until a certain combination is met,
 %   which makes them pretty fast. The test for a blank argument should be called
 %   with an arbitrary token following the argument. Each of these utilize the
-%   fact that the argument will contain a leading \cs{q_mark}.
+%   fact that the argument will contain a leading \cs{s_@@_mark}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_empty:w #1 \s_@@_mark \s_@@_stop {}
 \cs_new:Npn \@@_if_blank:w \s_@@_mark #1 { \@@_if_empty:w \s_@@_mark }
@@ -1184,7 +1184,9 @@
 %
 % \begin{macro}[EXP]{\@@_misplaced_equal_error:}
 %   Just throw an error expandably. This is hid inside a macro so that other
-%   macros don't have to gobble so many tokens, which increases speed.
+%   macros don't have to gobble so many tokens, which increases speed for
+%   correct input. This will marginally slow down the error case, but that
+%   doesn't have to be fast anyway.
 %    \begin{macrocode}
 \cs_new:Npn \@@_misplaced_equal_error:
   {
