\tl_range:nnn accepts integer expressions

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1086,7 +1086,7 @@
 %   Leaves in the input stream the items from the \meta{start index} to the
 %   \meta{end index} inclusive.  Spaces and braces are preserved between
 %   the items returned (but never at either end of the list).
-%   Here \meta{start index} and \meta{end index} should be integer denotations.
+%   Here \meta{start index} and \meta{end index} should be \meta{integer expressions}.
 %   For describing in detail the functions' behavior, let $m$ and $n$ be the start
 %   and end index respectively. If either is $0$, the result is empty. A positive
 %   index means `start counting from the left end', and a negative index means
