Do not redirect warnings

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -4894,10 +4894,7 @@
   }
 \keys_set:nV { xparse } \l_@@_options_clist
 \bool_if:NF \l_@@_log_bool
-  {
-    \msg_redirect_module:nnn { LaTeX / xparse } { info }    { none }
-    \msg_redirect_module:nnn { LaTeX / xparse } { warning } { none }
-  }
+  { \msg_redirect_module:nnn { LaTeX / xparse } { info } { none } }
 %    \end{macrocode}
 % \end{variable}
 % \end{variable}
