Support control sequences as argument delimiters

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2991,6 +2991,12 @@
 %   the grabber. (This assumes that the open and close delimiters are not the
 %   same character with different category codes, but that really should not
 %   happen in any sensible document-level syntax.)
+%   An exception is when |#1| is a control sequence token, in which case the
+%   character-token treatment is no good because if hit with \cs{token_to_str:N}
+%   it would add sputios tokens to the argument. In this case a different
+%   branch is taken. The token inserted is then the same \meta{csname} as |#1|,
+%   but with a space appended, so that the grabber don't see it as another
+%   of the same delimiter.
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_grab_D_call:Nw #1
   {
@@ -3000,8 +3006,15 @@
           \l_@@_fn_tl \char_generate:nn { `#1 } { 11 }
       }
       {
-        \exp_after:wN \l_@@_fn_tl
-        \token_to_str:N #1
+        \token_if_cs:NTF #1
+          {
+            \exp_after:wN \l_@@_fn_tl
+            \cs:w \cs_to_str:N #1 ~ \cs_end:
+          }
+          {
+            \exp_after:wN \l_@@_fn_tl
+            \token_to_str:N #1
+          }
       }
   }
 %    \end{macrocode}
