Update two comments

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1606,7 +1606,7 @@
 %
 % \begin{macro}{\use:x}
 %   Fully expands its argument and passes it to the input stream. Uses
-%   the reserved \cs{l_@@_internal_tl} which will be set up in \pkg{l3expan}.
+%   the reserved \cs{l_@@_internal_tl} which we've set up above.
 %    \begin{macrocode}
 \cs_set_protected:Npn \use:x #1
   {
@@ -1621,7 +1621,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\use:e}
-%   Currently \LuaTeX-only: emulated for older engines.
+%   In non-\LuaTeX engines older than 2019, \cs{expanded} is emulated.
 %    \begin{macrocode}
 \cs_set:Npn \use:e #1 { \tex_expanded:D {#1} }
 \tex_ifdefined:D \tex_expanded:D \tex_else:D
