Improve checking for a cs

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2995,7 +2995,7 @@
           \l_@@_fn_tl \char_generate:nn { `#1 } { 11 }
       }
       {
-        \token_if_cs:NTF #1
+        \@@_token_if_cs:NTF #1
           {
             \exp_after:wN \l_@@_fn_tl
             \cs:w \cs_to_str:N #1 ~ \cs_end:
@@ -4406,9 +4406,13 @@
     \tl_set:Nn \l_@@_tmpb_tl {#4}
     \peek_meaning:NTF #2
       {
-        \token_if_cs:NTF #2
-          { \@@_peek_cs_check_equal:NNN #1 #2 }
-          { \@@_peek_true_remove:NNw #1 \l_@@_tmpa_tl }
+        \token_if_eq_meaning:NNTF #2 \c_group_begin_token
+          { \@@_peek_true_remove:NNw #1 \l__xparse_tmpa_tl }
+          {
+            \@@_token_if_cs:NTF #2
+              { \@@_peek_cs_check_equal:NNN #1 #2 }
+              { \@@_peek_true_remove:NNw #1 \l__xparse_tmpa_tl }
+          }
       }
       { \l_@@_tmpb_tl }
   }
