Less argument throwing-around

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -4407,11 +4407,11 @@
     \peek_meaning:NTF #2
       {
         \token_if_eq_meaning:NNTF #2 \c_group_begin_token
-          { \@@_peek_true_remove:NNw #1 \l__xparse_tmpa_tl }
+          { \@@_peek_true_remove:Nw #1 }
           {
             \@@_token_if_cs:NTF #2
               { \@@_peek_cs_check_equal:NNN #1 #2 }
-              { \@@_peek_true_remove:NNw #1 \l__xparse_tmpa_tl }
+              { \@@_peek_true_remove:Nw #1 }
           }
       }
       { \l_@@_tmpb_tl }
@@ -4419,18 +4419,18 @@
 \cs_new_protected:Npn \@@_peek_cs_check_equal:NNN #1#2#3
   {
     \str_if_eq:nnTF {#2} {#3}
-      { \@@_peek_true_remove:NNw #1 \l_@@_tmpa_tl }
+      { \@@_peek_true_remove:Nw #1 }
       { \l_@@_tmpb_tl }
     #3
   }
-\cs_new_protected:Npn \@@_peek_true_remove:NNw #1 #2
+\cs_new_protected:Npn \@@_peek_true_remove:Nw #1
   {
     \bool_if:NTF #1
       {
-        \tex_afterassignment:D #2
+        \tex_afterassignment:D \l_@@_tmpa_tl
         \cs_set_eq:NN \@@_tmp:w
       }
-      {#2}
+      { \l_@@_tmpa_tl }
   }
 %    \end{macrocode}
 % \end{macro}
