Add \MakeOuterQuote{"} for (full) l3news.tex

--- a/l3kernel/doc/l3news.tex
+++ b/l3kernel/doc/l3news.tex
@@ -25,6 +25,8 @@
 \hypersetup{colorlinks}
 \usepackage{bookmark}
 
+\MakeOuterQuote{"}
+
 \makeatletter
 \newcounter{issue}
 \renewcommand*{\theissue}{%
@@ -155,6 +157,13 @@
   }{%
     \clearpage
   }%
+  \def\MakeOuterQuote#1{%
+    \if\noexpand"\noexpand#1%
+    \else
+      \@latex@error{Unexpected \string\MakeOuterQuote
+          {\detokenize{#1}}\MessageBreak%
+        Check if output is valid in `l3news\theissue.tex'}%
+    \fi}
   \makeatother
   \loop
   \ifnum\value{issue}<\lastissue
