Get backslash character in pdf outline

--- a/l3kernel/doc/l3news.tex
+++ b/l3kernel/doc/l3news.tex
@@ -27,6 +27,12 @@
 
 \MakeOuterQuote{"}
 
+\pdfstringdefDisableCommands
+  {%
+    \RenewExpandableDocumentCommand \cs { O{} m }
+      {\textbackslash#2}%
+  }
+
 \makeatletter
 \newcounter{issue}
 \renewcommand*{\theissue}{%
