--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2043,8 +2043,8 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_single_token_check:n}
-%   Checks that the argument is a single token (possibly surrounded by
-%   spaces), and aborts the definition otherwise.
+%   Checks that the argument is a single (non-space) token (possibly
+%   surrounded by spaces), and aborts the definition otherwise.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_single_token_check:n #1
   {
@@ -4569,7 +4569,7 @@
 \__kernel_msg_new:nnnn { xparse } { not-single-token }
   {
     Argument~delimiter~'#2'~for~the~#1~should~be~
-    a~single~token.
+    a~single~non-space~token.
   }
   {
     The~argument~specification~provided~was~not~valid:~in~a~place~
