Rephrase paragraph after Frank's comments

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -529,17 +529,12 @@
 % \subsubsection{Control sequence tokens}
 %
 % A control sequence (or control character) token is characterised by is
-% its name, and its meaning is its definition.  For example, after
-% |\cs_set:Npn \tmp_A:w {abc}| and |\cs_set:Npn \tmp_B:w {abc}|, the
-% two control sequence tokens |\tmp_A:w| and |\tmp_B:w| have the same
-% meaning (|abc|).  A token cannot have two different meanings at the
-% same time.  When a control sequence is used as delimiter in a command,
-% both its name (string representation) and meaning have to match when
-% the command is scanning for the delimiter.  However,
-% different from the character token, the meaning of a control sequence
-% is not fixed at the time the command is defined, so if it is redefined
-% later, the command still finds the delimiter as long as the control
-% sequence name is the same:  For example in:
+% its name, and its meaning is its definition.
+% A token cannot have two different meanings at the same time.
+% When a control sequence is defined as delimiter in a command,
+% it will be detected as delimiter whenever the control sequence name
+% is found in the document regardless of its current definition.
+% For example in:
 % \begin{verbatim}
 %   \cs_set:Npn \x { abc }
 %   \NewDocumentCommand { \foobar } { D\x\y{default} } {(#1)}
