Updated primitives for TL'20

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -804,6 +804,8 @@
   \@@_primitive:NN \dviextension          \tex_dviextension:D
   \@@_primitive:NN \dvifeedback           \tex_dvifeedback:D
   \@@_primitive:NN \dvivariable           \tex_dvivariable:D
+  \@@_primitive:NN \eTeXglueshrinkorder   \tex_eTeXglueshrinkorder:D
+  \@@_primitive:NN \eTeXgluestretchorder  \tex_eTeXgluestretchorder:D
   \@@_primitive:NN \etoksapp              \tex_etoksapp:D
   \@@_primitive:NN \etokspre              \tex_etokspre:D
   \@@_primitive:NN \exceptionpenalty      \tex_exceptionpenalty:D
@@ -1124,9 +1126,11 @@
   \@@_primitive:NN \hfi                   \tex_hfi:D
   \@@_primitive:NN \ifdbox                \tex_ifdbox:D
   \@@_primitive:NN \ifddir                \tex_ifddir:D
+  \@@_primitive:NN \ifjfont               \tex_ifjfont:D
   \@@_primitive:NN \ifmbox                \tex_ifmbox:D
   \@@_primitive:NN \ifmdir                \tex_ifmdir:D
   \@@_primitive:NN \iftbox                \tex_iftbox:D
+  \@@_primitive:NN \iftfont               \tex_iftfont:D
   \@@_primitive:NN \iftdir                \tex_iftdir:D
   \@@_primitive:NN \ifybox                \tex_ifybox:D
   \@@_primitive:NN \ifydir                \tex_ifydir:D
@@ -1171,6 +1175,7 @@
 %    \end{macrocode}
 % Primitives from \upTeX{}.
 %    \begin{macrocode}
+  \@@_primitive:NN \currentcjktoken       \tex_currentcjktoken:D
   \@@_primitive:NN \disablecjktoken       \tex_disablecjktoken:D
   \@@_primitive:NN \enablecjktoken        \tex_enablecjktoken:D
   \@@_primitive:NN \forcecjktoken         \tex_forcecjktoken:D
