--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -2,7 +2,7 @@
 
 File: source3body.tex
 
-Copyright (C) 1990-2012,2014-2019 The LaTeX3 Project
+Copyright (C) 1990-2012,2014-2020 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -488,7 +488,8 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \ExplSyntaxOn
 \clist_gput_right:Nn \g_docinput_clist
   {
-    l3text-case.dtx
+    l3text-case.dtx ,
+    l3text-purify.dtx
   }
 \ExplSyntaxOff
 \DocInput{l3legacy.dtx}
